--- a/analysis/cohCon_analyze.Rmd
+++ b/analysis/cohCon_analyze.Rmd
@@ -13,7 +13,7 @@ library(effects)
 ```
 
 ```{r}
-getSubjThresholdPlot = function(type,snum) {
+getSubjThresholdData = function(type,snum) {
 subj = sprintf('s%03.0f',snum)
 anFolder = sprintf('/Users/dan/data/cohcon/%s/%s/analysis/',subj,type)
 csvFolder = paste(anFolder,'csv/',sep="")
@@ -29,21 +29,24 @@ run = read.csv(sprintf('%srun04.csv',csvFolder))
 # Setup variables
 all = rbind(mainTh,catTh,nocatTh) %>%
   mutate(task=factor(task,levels=c(1,2),labels=c('Coherence','Contrast')),catch=factor(catch,levels=c(-1,0,1),labels=c('Control','Task Cued','Task Miscued')),threshold=threshold*100)
-all_ = all %>%
+
+all = cbind(all,subj=snum)
+
+return(all)
+}
+```
+
+```{r}
+getSubjThresholdPlot = function(all,subj,type) {
+  all_ = all %>%
   group_by(task,catch) %>%
   summarise(sd=sd(threshold),n=n(),threshold=mean(threshold)) %>%
   mutate(se = sd/sqrt(n)) %>%
   mutate(ci = se*1.96)
 
-# Calculate pooled variance
-if (all(all_$n>2)) {
-ES = all_ %>% ungroup() %>%
-  filter(catch!='Nocatch') %>%
-  group_by(task) %>%
-  mutate(pooled = sqrt(sum(sd^2*(n-1))/sum(n-1))) %>%
-  summarise(t=mean(threshold),effect = diff(threshold,lag=1)/mean(pooled))
-}
-
+anFolder = sprintf('/Users/dan/data/cohcon/%s/%s/analysis/',subj,type)
+csvFolder = paste(anFolder,'csv/',sep="")
+figFolder = paste('/Users/dan/proj/att_awe/analysis/figures/',type,sep="")
  # Individual plot,
 fname=sprintf('%s/%s_th_task_catch.pdf',figFolder,subj)
 g = ggplot() +
@@ -55,14 +58,13 @@ g = ggplot() +
   scale_color_brewer(palette='Accent') +
   theme(text = element_text(size=20)) +
   xlab('Pedestal Value (%)') +
-  ylab('Discrimination Threshold (%)') #+
+  ylab('Discrimination Threshold (%)') +
+  scale_y_continuous(limits=c(0,75))
 ggsave(filename=fname,plot=g)
-
-all = cbind(all,subj=snum)
-
-return(all)
+return(g)
 }
 ```
+
 
 ```{r}
 getSubjFits = function(type,snum) {
@@ -78,6 +80,55 @@ return(fits)
 ```
 
 ```{r}
+# Multiple plot function
+#
+# ggplot objects can be passed in ..., or to plotlist (as a list of ggplot objects)
+# - cols:   Number of columns in layout
+# - layout: A matrix specifying the layout. If present, 'cols' is ignored.
+#
+# If the layout is something like matrix(c(1,2,3,3), nrow=2, byrow=TRUE),
+# then plot 1 will go in the upper left, 2 will go in the upper right, and
+# 3 will go all the way across the bottom.
+#
+multiplot <- function(..., plotlist=NULL, file, cols=1, layout=NULL) {
+  library(grid)
+
+  # Make a list from the ... arguments and plotlist
+  plots <- c(list(...), plotlist)
+
+  numPlots = length(plots)
+
+  # If layout is NULL, then use 'cols' to determine layout
+  if (is.null(layout)) {
+    # Make the panel
+    # ncol: Number of columns of plots
+    # nrow: Number of rows needed, calculated from # of cols
+    layout <- matrix(seq(1, cols * ceiling(numPlots/cols)),
+                    ncol = cols, nrow = ceiling(numPlots/cols))
+  }
+
+ if (numPlots==1) {
+    print(plots[[1]])
+
+  } else {
+    # Set up the page
+    grid.newpage()
+    pushViewport(viewport(layout = grid.layout(nrow(layout), ncol(layout))))
+
+    # Make each plot, in the correct location
+    for (i in 1:numPlots) {
+      # Get the i,j matrix positions of the regions that contain this subplot
+      matchidx <- as.data.frame(which(layout == i, arr.ind = TRUE))
+
+      print(plots[[i]], vp = viewport(layout.pos.row = matchidx$row,
+                                      layout.pos.col = matchidx$col))
+    }
+  }
+}
+```
+
+
+```{r}
 getFolders = function(snum) {
   anFolder = sprintf('/Users/dan/data/cohcon/%s/%s/analysis/',subj,type)
   csvFolder = paste(anFolder,'csv/',sep="")
@@ -91,13 +142,27 @@ subjs = c(300,25,21,302)
 
 allT = data.frame()
 allF = data.frame()
+
+gs = list()
 for (snum in subjs) {
-  all = getSubjThresholdPlot('behav',snum)
+  all = getSubjThresholdData('behav',snum)
   fit = getSubjFits('behav',snum)
   allF = rbind(allF,fit)
   allT = rbind(allT,all)
+  
+  # plots
+  getSubjThresholdPlot(all,snum,'behav')
 }
+
 ```
+
+Multiplot code: (don't run except for multiplot)
+```{r}
+all = getSubjThresholdData('behav',300)
+g300 = getSubjThresholdPlot(all,300,'behav')
+
+```
+
 
 ```{r}
 subjs = c(300)
