--- a/analysis/cc_decoding_R.Rmd
+++ b/analysis/cc_decoding_R.Rmd
@@ -24,7 +24,7 @@ data = d %>%
 ```{r}
 rois = levels(data$roi)
 
-lmdata = data.frame(ec=numeric(0),em=numeric(0),attending=numeric(0),voxel=numeric(0),roi=numeric(0))
+lmdata = data.frame(ec=numeric(0),em=numeric(0),attending=numeric(0),voxel=numeric(0),roi=numeric(0),side=numeric(0))
 
 for (rii in 1:length(rois)) {
   ri = rois[rii]
@@ -32,17 +32,21 @@ for (rii in 1:length(rois)) {
     filter(roi==ri)
   voxels  = unique(roidata$voxel)
   for (vi in 1:length(voxels)) {
-    vox = voxels[vi]
-    rsd = roidata %>%
-      filter(voxel==vox)
-    rs = lm(amplitude ~ task*(con + coh),data=rsd)
-    eff_con_att_con = rs$coefficients[3]
-    eff_con_att_coh = rs$coefficients[3]+rs$coefficients[5]
-    eff_coh_att_con = rs$coefficients[4]
-    eff_coh_att_coh = rs$coefficients[4]+rs$coefficients[6]
-    
-    lmdata[nrow(lmdata)+1,] = c(ec=eff_con_att_con,em=eff_coh_att_con,attending=0,voxel=vox,roi = rii)
-    lmdata[nrow(lmdata)+1,] = c(ec=eff_con_att_coh,em=eff_coh_att_coh,attending=1,voxel=vox, roi = rii)
+    for (si in 1:2) {
+      vox = voxels[vi]
+      rsd = roidata %>%
+        filter(voxel==vox,side==si)
+      if (nrow(rsd)>0) {
+        rs = lm(amplitude ~ task*(con + coh),data=rsd)
+        eff_con_att_con = rs$coefficients[3]
+        eff_con_att_coh = rs$coefficients[3]+rs$coefficients[5]
+        eff_coh_att_con = rs$coefficients[4]
+        eff_coh_att_coh = rs$coefficients[4]+rs$coefficients[6]
+        
+        lmdata[nrow(lmdata)+1,] = c(ec=eff_con_att_con,em=eff_coh_att_con,attending=0,voxel=vox,roi = rii,side=si)
+        lmdata[nrow(lmdata)+1,] = c(ec=eff_con_att_coh,em=eff_coh_att_coh,attending=1,voxel=vox, roi = rii,side=si)
+      }
+    }
   }
 }
 ```
@@ -61,7 +65,7 @@ lmdata = lmdata %>%
 g = ggplot(data=lmdata, aes(ec,em,color=attending)) +
   geom_point(size=0.5) +
   geom_smooth(method="lm") +
-  facet_grid(.~roi, scales="fixed") +
+  facet_grid(side~roi, scales="fixed") +
   xlab('Effect Across Contrast 0->1 (beta)') +
   ylab('Effect Across Coherence 0->1 (beta)') +
   coord_fixed() +
@@ -79,7 +83,7 @@ pMain <- localdata %>%
   ggplot(data=., aes(ec,em,color=attending)) +
   geom_point() +
   geom_smooth(method="lm") +
-  facet_grid(.~roi, scales="fixed") +
+  facet_grid(side~roi, scales="fixed") +
   xlab('Effect Across Contrast 0->1 (beta)') +
   ylab('Effect Across Coherence 0->1 (beta)') +
   theme_bw()
